--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
 		"node": "14.x"
 	},
 	"scripts": {
-		"dev": "watchlist src --eager -- npm run build",
+		"dev": "node ./scripts/dev.js",
 		"build": "node ./scripts/build.js"
 	},
 	"dependencies": {
 		"hyperapp": "^2.0.19"
 	},
 	"devDependencies": {
-		"esbuild": "0.12.x",
-		"watchlist": "^0.3.1"
+		"esbuild": "0.12.x"
 	}
 }
