--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "include": ["src/**/*.js", "src/**/*.ts"],
+    "include": ["src/**/*.js", "src/**/*.jsx"],
     "compilerOptions": {
         "allowJs": true,
         "checkJs": true,
