--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
 	"dependencies": {
 		"classies": "^1.0.5",
 		"codemirror": "^5.65.2",
-		"hexoid": "^1.0.0",
 		"marked": "^4.0.12",
+		"mergerino": "^0.4.0",
 		"mithril": "github:mithrilJS/mithril.js#9906e23118ef2bfaffc09c13ddd0dd051f5d895b",
-		"vyce": "^0.3.0"
+		"uid": "^2.0.0"
 	},
 	"devDependencies": {
 		"esbuild": "^0.14.28",
